@@ -1,6 +1,5 @@
 /*
- * reserved comment block
- * DO NOT REMOVE OR ALTER!
+ * Copyright (c) 2017, Oracle and/or its affiliates. All rights reserved.
  */
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
@@ -124,7 +123,7 @@ public class ObjectFactory {
         ClassLoader cl = System.getSecurityManager()!=null ? null : findClassLoader();
         try{
             Class providerClass = findProviderClass(className, cl, doFallback);
-            Object instance = providerClass.newInstance();
+            Object instance = providerClass.getConstructor().newInstance();
             debugPrintln(()->"created new instance of " + providerClass +
                              " using ClassLoader: " + cl);
             return instance;
